# LinInfoGUI

./: CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  LinInfoGUI.cpp  LinInfoGUI_full.cpp  LinInfoGUI_old.cpp  LinInfoGUI_test.cpp  README.md  about_tab.cpp  about_tab.h  appimage.strace  audio.h  audio_tab.cpp  audio_tab.h  cpu.h  cpu_tab.cpp  cpu_tab.h  ctrlw.cpp  ctrlw.h  generic_tab.cpp  generic_tab.h  graphics_tab.cpp  graphics_tab.h  gui_helpers.h  helper_functions.h  log_helper.h  lshwgui.cpp.save  lsv.cpp  mainboard.h  makeit.sh  memory.cpp  memory.h  memory_tab.cpp  memory_tab.h  motherboard_tab.cpp  motherboard_tab.h  multitabs.cpp  multitabs.h  network.h  network_geek.cpp  (+28 more)
AppDir/: .DirIcon  AppRun
AppDir/usr/share/applications/: lsv.desktop
LSV/: LSV
build_debug/: CMakeCache.txt  LSV  Makefile  cmake_install.cmake
build_debug/.qt/: QtDeploySupport.cmake
build_debug/LSV_autogen/: deps  moc_predefs.h
build_debug/LSV_autogen/EWIEGA46WW/: moc_about_tab.cpp  moc_about_tab.cpp.d  moc_audio_tab.cpp  moc_audio_tab.cpp.d  moc_cpu_tab.cpp.d  moc_ctrlw.cpp.d  moc_generic_tab.cpp  moc_generic_tab.cpp.d  moc_graphics_tab.cpp.d  moc_memory_tab.cpp.d  moc_motherboard_tab.cpp.d  moc_multitabs.cpp  moc_multitabs.cpp.d  moc_network_geek.cpp.d  moc_network_tab.cpp.d  moc_os_tab.cpp  moc_os_tab.cpp.d  moc_pc_tab.cpp  moc_pc_tab.cpp.d  moc_peripherals_tab.cpp  moc_peripherals_tab.cpp.d  moc_ports_tab.cpp  moc_ports_tab.cpp.d  moc_screen_tab.cpp  moc_screen_tab.cpp.d  moc_storage_tab.cpp  moc_storage_tab.cpp.d  moc_summary_tab.cpp  moc_summary_tab.cpp.d  moc_tab_widget_base.cpp.d  moc_windowing_tab.cpp  moc_windowing_tab.cpp.d
build_debug/LSV_autogen/include/: lsv.moc.d
build_debug/priv/: Makefile  cmake_install.cmake  lsv-elevate
build_debug/priv/lsv-elevate_autogen/: moc_predefs.h
build_release/: CMakeCache.txt  LSV  Makefile  cmake_install.cmake
build_release/.qt/: QtDeploySupport.cmake
build_release/.rcc/: qrc_resources.cpp  resources.qrc
build_release/LSV_autogen/: deps  mocs_compilation.cpp
build_release/LSV_autogen/EWIEGA46WW/: moc_about_tab.cpp.d  moc_audio_tab.cpp.d  moc_cpu_tab.cpp  moc_cpu_tab.cpp.d  moc_ctrlw.cpp  moc_ctrlw.cpp.d  moc_generic_tab.cpp.d  moc_graphics_tab.cpp  moc_graphics_tab.cpp.d  moc_memory_tab.cpp  moc_memory_tab.cpp.d  moc_motherboard_tab.cpp  moc_motherboard_tab.cpp.d  moc_multitabs.cpp.d  moc_network_geek.cpp  moc_network_geek.cpp.d  moc_network_tab.cpp  moc_network_tab.cpp.d  moc_os_tab.cpp.d  moc_pc_tab.cpp.d  moc_peripherals_tab.cpp.d  moc_ports_tab.cpp.d  moc_screen_tab.cpp.d  moc_storage_tab.cpp.d  moc_summary_tab.cpp.d  moc_tab_widget_base.cpp  moc_tab_widget_base.cpp.d  moc_windowing_tab.cpp.d
build_release/LSV_autogen/include/: lsv.moc  lsv.moc.d
build_release/priv/: Makefile  cmake_install.cmake
build_release/priv/lsv-elevate_autogen/: deps
priv/: CMakeLists.txt  elevate.c
